fixed tags overflow

--- a/style/rally.scss
+++ b/style/rally.scss
@@ -27,6 +27,10 @@
     gap: 4px;
 }
 
+.rally-tag-list {
+  flex-wrap: wrap;
+}
+
 .rally-tag {
     padding: 2px 6px;
     background: color.$wood;
